# AdventOfCode2022

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml  utils.py
day_01/: README.md  day_01.py
day_02/: README.md  day_02.py  day_02_overengineered.py
day_03/: README.md  day_03.py
day_04/: README.md  day_04.py
day_05/: README.md  day_05.py
day_06/: day_06.py
day_07/: README.md  day_07.py
day_08/: README.md  day_08.py
day_09/: day_09.py
day_10/: day_10.py
day_11/: README.md  day_11.py
day_12/: README.md  day_12.py
day_13/: README.md  day_13.py
day_14/: README.md  day_14.py
day_15/: README.md  day_15.py
day_16/: day_16.py
day_17/: README.md  day_17.py
day_18/: day_18.py
day_19/: day_19.py
day_20/: day_20.py
day_21/: README.md  day_21.py
day_22/: day_22.py
day_23/: day_23.py
day_24/: day_24.py
day_25/: README.md  day_25.py
template/: day_xx.py
