[tool.poetry]
name = "adventofcode_2022"
version = "0.1.0"
description = ""
authors = ["Kevin Trebing"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.5.0"
numpy = "^1.21.4"
pandas = "^1.3.4"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 120
force_sort_within_sections = "False"
order_by_type = "False"


[tool.black]
line-length = 120
skip-magic-trailing-comma = true
