[tool.poetry]
name = "adventofcode_2022"
version = "0.1.0"
description = ""
authors = ["Kevin Trebing"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
numpy = "^1.23.4"
matplotlib = "^3.6.2"
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 120
force_sort_within_sections = "False"
order_by_type = "False"


[tool.black]
line-length = 120
skip-magic-trailing-comma = true
